tests/errors/semantic/blocking/REAL_TYPE.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(a : 'real'):
    pass
